[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "slicetime"
version = "0.1"
authors = [{name = "Jeremiah Paige", email = "ucodery@gmail.com"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires_python = ">=3.6"
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["slice", "time", "datetime"]
dynamic = ["description"]

[project.urls]
Home = "https://github.com/ucodery/slicetime"

[project.optional-dependencies]
dev = ["flit", "nox"]
test = ["pytest >=2.7.3", "pytest_cases >=3.6.0,<4"]
